--- a/index.html
+++ b/index.html
@@ -30,7 +30,18 @@
     <main>
         <section>
             <div class="parallax1"></div>
-            <div class="gallery" id="product" style="background-color:#f2f2f2;overflow: hidden;">
+
+            <div class="row content-fluid" id="product" style="background-color:#f2f2f2; text-align: center; padding-top: 5%; margin: 0 auto; justify-content: center;">
+                <div class="col-md-3">
+                    <hr>
+                </div>
+                <div class="col-md-4"><h1>Pisos Cerâmicas</h1></div>
+                <div class="col-md-3">
+                    <hr>
+                </div>
+            </div>
+
+            <div class="gallery" style="background-color:#f2f2f2;overflow: hidden;">
                 <div class="content">
                     <img class="imgProduct" src="img/pisos/taco.jpeg" alt="Logo">
                     <h3>Taco</h3>
@@ -209,16 +220,16 @@
 
                             <ul class="social-list">
                                 <li style="font-size: 25px;">
-                                    <a href="http://" class="social-icon icon-white">
+                                    <a href="https://www.facebook.com/" target="_blank" class="social-icon icon-white">
                                         <i class="fa fa-facebook"></i>
                                     </a>
-                                    <a href="http://" class="social-icon icon-white">
+                                    <a href="https://twitter.com/i/flow/login?input_flow_data=%7B%22requested_variant%22%3A%22eyJsYW5nIjoicHQifQ%3D%3D%22%7D" class="social-icon icon-white" target="_blank">
                                         <i class="fa fa-twitter"></i>
                                     </a>
-                                    <a href="http://" class="social-icon icon-white">
+                                    <a href="https://www.youtube.com/" class="social-icon icon-white" target="_blank">
                                         <i class="fa fa-youtube-play"></i>
                                     </a>
-                                    <a href="http://" class="social-icon icon-white">
+                                    <a href="" class="social-icon icon-white">
                                         <i class="fa fa-google-plus"></i>
                                     </a>
                                 </li>
