--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                     <div class="col-md-6">
                         <div id="footer-menu">
                             <ul>
-                                <li><a href="index.html">HOME</a></li>
+                                <li><a href="index.html">INÍCIO</a></li>
                                 <li><a href="#about">SOBRE</a></li>
                                 <li><a href="#product">PRODUTOS</a></li>
                                 <li><a href="#contact">CONTATO</a></li>
